# book-prototype-copy

./: .editorconfig  .firebaserc.sample  .gitignore  Cargo.toml  Makefile  README.md  build.rs  firebase.json.sample
backend/: Cargo.toml  README.md  build.rs
backend/src/: main.rs
backend/src/conf/: http.conf  http.json
backend/src/contextmap/user/: api.rs
conf/: credentials.json.sample
docker/: docker-compose.yml
docker/init_db/: 00_create_database.sql  01_user.sql
frontend/: README.md  package.json
frontend/src/: App.vue  main.ts  shims-json.d.ts
frontend/src/components/auth/: GoogleLoginForm.vue  LogoutForm.vue  MailAddressLoginForm.vue  PasswordResetForm.vue
frontend/src/repository/localstorage/: Module.ts  UserRepository.ts
frontend/src/router/: index.ts
frontend/src/views/: Auth.vue
frontend/tests/e2e/plugins/: index.js
scripts/: grpc_request.sh
src/: main.rs
src/grpc/: models.proto
