[package]
name = "book-prototype"
version = "0.1.0"
authors = ["???"]
edition = "2018"

[dependencies]
bytes        = "0.5"
hocon        = "0.3.2"
postgres     = "0.17.1"
prost        = "0.6"
prost-derive = "0.6"
tokio = { version = "0.2", features = ["full"] }
tonic        = "0.1.1"

[build-dependencies]
tonic-build  = "0.1.1"
